search results spacing fix

--- a/wp-content/themes/sixgill/css/custom/mobile_portrait_search.css
+++ b/wp-content/themes/sixgill/css/custom/mobile_portrait_search.css
@@ -16,4 +16,8 @@
 	.menu-search-mobile-tablet {
 		margin-top: 12px;
 	}
+
+	.search-result-section {
+		margin-top: 81px;
+	}
 }
